--- a/src/html/sponsors/index.jade
+++ b/src/html/sponsors/index.jade
@@ -12,40 +12,39 @@ block contents
 
         h1 Festival Sponsors
         
-        p This year&rsquo;s festival sponsors will be listed soon.
+        //- p This year&rsquo;s festival sponsors will be listed soon.
 
-    //- .SponsorsContainer
-    //- 
-    //-     h2.SponsorsHeader.SponsorsHeader--gold Gold Sponsors
-    //-     ul.Sponsors.Sponsors--gold
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/gold/sweetwater-brewing.png", "Sweetwater Brewing Co.", "http://sweetwaterbrew.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/gold/blue-moon.png", "Blue Moon Brewing", "https://www.bluemoonbrewingcompany.com")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/gold/old-fourth-ward-distillery.png", "Old Fourth Ward Distillery", "http://www.old4th.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/gold/sierra-nevada.png", "Sierra Nevada Brewing", "http://www.sierranevada.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/gold/terrapin.png", "Terrapin Beer Co.", "http://terrapinbeer.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/gold/asw-distillery.png", "ASW Distillery", "http://www.aswdistillery.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/gold/northside-hospital.png", "Northside Hospital", "http://www.northside.com/")
-    //- 
-    //-     h2.SponsorsHeader.SponsorsHeader--silver Silver Sponsors
-    //-     ul.Sponsors.Sponsors--silver
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/silver/andre-de-winter.png", "Andre de Winter", "http://www.dewinterhomes.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/silver/mailchimp.png", "MailChimp", "http://mailchimp.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/silver/publix.png", "Publix", "http://publix.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/silver/north-american-properties.png", "North American Properties", "http://www.naproperties.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/silver/circus-camp.png", "Circus Camp", "http://www.circuscamp.org/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/silver/fontis.png", "Fontis Water", "https://www.fontiswater.com/")
-    //- 
-    //- 
-    //-     h2.SponsorsHeader.SponsorsHeader--bronze Bronze Sponsors
-    //-     ul.Sponsors.Sponsors--bronze
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/atlanta-medical-center.png", "Atlanta Medical Center", "http://atlantamedcenter.com")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/whitten.jpg", "Whitten Management Services", "http://www.whittenmanagement.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/wrfg.png", "WRFG", "http://wrfg.org")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/ecotools.png", "Ecotools", "https://ecotools.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/peachskinsheets.png", "PeachSkinSheets", "http://www.peachskinsheets.com")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/renewal-andersen.png", "Renewal by Andersen", "http://www.rbaofatlanta.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/creative-loafing.png", "Creative Loafing", "http://www.clatl.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/atlanta-united.png", "Atlanta United", "http://www.atlutd.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/edgewood-retail.png", "Edgewood Retail District", "http://shopedgewoodretaildistrict.com/")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/xfinity.png", "Xfinity", "https://www.xfinity.com")
-    //-         mixin sponsorGridImage("/assets/img/2017/sponsors/booth/aquaguard.png", "AquaGuard", "http://www.aquaguard.net")
+    .SponsorsContainer
+        h2.SponsorsHeader.SponsorsHeader--presenting Presenting Sponsor
+        .Sponsors.Sponsors--Presenting
+            a(href="https://www.northside.com/" target="_blank")
+                img(src="/assets/img/2018/sponsors/northside-hospital.png" alt="Inman Park Festival Presenting Sponsor: Northside Hospital")
+    
+        //- h2.SponsorsHeader.SponsorsHeader--gold Gold Sponsors
+        //- ul.Sponsors.Sponsors--gold
+        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/sweetwater-brewing.png", "Sweetwater Brewing Co.", "http://sweetwaterbrew.com/")
+        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/blue-moon.png", "Blue Moon Brewing", "https://www.bluemoonbrewingcompany.com")
+        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/old-fourth-ward-distillery.png", "Old Fourth Ward Distillery", "http://www.old4th.com/")
+        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/sierra-nevada.png", "Sierra Nevada Brewing", "http://www.sierranevada.com/")
+        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/terrapin.png", "Terrapin Beer Co.", "http://terrapinbeer.com/")
+        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/asw-distillery.png", "ASW Distillery", "http://www.aswdistillery.com/")
+        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/northside-hospital.png", "Northside Hospital", "http://www.northside.com/")
+    
+        h2.SponsorsHeader.SponsorsHeader--silver Silver Sponsors
+        ul.Sponsors.Sponsors--silver
+            mixin sponsorGridImage("/assets/img/2018/sponsors/silver/andre-de-winter.png", "Andre de Winter", "http://www.dewinterhomes.com/")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/silver/mailchimp.png", "MailChimp", "http://mailchimp.com/")
+    
+        h2.SponsorsHeader.SponsorsHeader--bronze Bronze Sponsors
+        ul.Sponsors.Sponsors--bronze
+            mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/happier-camper.png", "Happier Camper", "http://www.happiercamper.com")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/whitten.jpg", "Whitten Management Services", "http://www.whittenmanagement.com/")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/wrfg.png", "WRFG", "http://wrfg.org")
+            //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/ecotools.png", "Ecotools", "https://ecotools.com/")
+            //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/peachskinsheets.png", "PeachSkinSheets", "http://www.peachskinsheets.com")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/renewal-andersen.png", "Renewal by Andersen", "http://www.rbaofatlanta.com/")
+            //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/creative-loafing.png", "Creative Loafing", "http://www.clatl.com/")
+            //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/atlanta-united.png", "Atlanta United", "http://www.atlutd.com/")
+            //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/edgewood-retail.png", "Edgewood Retail District", "http://shopedgewoodretaildistrict.com/")
+            //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/xfinity.png", "Xfinity", "https://www.xfinity.com")
+            //- mixin sponsorGridImage("/assets/img/2017/sponsors/booth/aquaguard.png", "AquaGuard", "http://www.aquaguard.net")
