--- a/src/html/events/tour-of-homes/index.jade
+++ b/src/html/events/tour-of-homes/index.jade
@@ -23,6 +23,13 @@ block contents
 
         p Tickets are $#{globals.tour.cost.advance} each and will be on sale in March.
 
+        h2 Tour of Homes Sponsors
+        
+        ul.Sponsors.Sponsors--other.Sponsors-top
+            mixin sponsorGridImage("/assets/img/2018/sponsors/toh/adam-stillman.png", "Adam Stillman", "http://adamstillman.net/index2.html")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/toh/floor-n-decor.png", "Floor & D&eacute;cor", "https://www.flooranddecor.com/")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/toh/vacasa.png", "Vacasa", "https://www.vacasa.com/")
+
         h2 This Year's Homes
 
     include _homes-2018.jade
