replaced images for mingo & brewery

--- a/src/assets/css/pages/_music.scss
+++ b/src/assets/css/pages/_music.scss
@@ -170,11 +170,11 @@ $bandPhotoBackground: #ddd;
             height: 100%;
         }
 
-        @media (min-width: $bp-md) {
-            .img {
-                height: 415px;
-            }
-        }
+        // @media (min-width: $bp-md) {
+        //     .img {
+        //         height: 415px;
+        //     }
+        // }
     }
 
     article {
