--- a/src/html/sponsors/index.jade
+++ b/src/html/sponsors/index.jade
@@ -47,4 +47,4 @@ block contents
             //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/atlanta-united.png", "Atlanta United", "http://www.atlutd.com/")
             //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/edgewood-retail.png", "Edgewood Retail District", "http://shopedgewoodretaildistrict.com/")
             //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/xfinity.png", "Xfinity", "https://www.xfinity.com")
-            //- mixin sponsorGridImage("/assets/img/2017/sponsors/booth/aquaguard.png", "AquaGuard", "http://www.aquaguard.net")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/toh/opendoor.png", "Opendoor", "https://www.opendoor.com/t/f_events/c_q118pilot/p_inmanpark")
