updated toh descriptions and new photos

--- a/src/html/sponsors/index.jade
+++ b/src/html/sponsors/index.jade
@@ -40,7 +40,7 @@ block contents
             mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/happier-camper.png", "Happier Camper", "http://www.happiercamper.com")
             mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/whitten.jpg", "Whitten Management Services", "http://www.whittenmanagement.com/")
             mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/wrfg.png", "WRFG", "http://wrfg.org")
-            //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/ecotools.png", "Ecotools", "https://ecotools.com/")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/kind.png", "KIND", "https://www.kindsnacks.com/")
             //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/peachskinsheets.png", "PeachSkinSheets", "http://www.peachskinsheets.com")
             mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/renewal-andersen.png", "Renewal by Andersen", "http://www.rbaofatlanta.com/")
             //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/creative-loafing.png", "Creative Loafing", "http://www.clatl.com/")
