--- a/src/html/events/tour-of-homes/_homes-2018.jade
+++ b/src/html/events/tour-of-homes/_homes-2018.jade
@@ -29,7 +29,7 @@ ul.TourHomes.u-container
         
         mixin tourImage("/assets/img/2018/toh/2-177-elizabeth", "177 Elizabeth Street")
         
-        p When Regina and Joe moved to Inman Park in 1996, they looked longingly at 177 Elizabeth Street and hoped that someday it might be theirs. Their dream came true in 2016, when they became the proud owners of this 1890 Queen Anne Victorian after the previous owners, longtime Inman Park neighbors, moved to a smaller home nearby. The house was built for W.C. Hale (for whom Hale Street was named) at a cost of $5500. While it stayed in the Hale family for many years, it was eventually divided into apartments. 
+        p When Regina and Joe moved to Inman Park in 1996, they looked longingly at 177 Elizabeth Street and hoped that someday it might be theirs. Their dream came true in 2016, when they became the proud owners of this 1890 Queen Anne Victorian after the previous owners, longtime Inman Park neighbors, moved to a smaller home nearby. The house was built for W.C. Hale (for whom Hale Street was named) at a cost of $5500. While it stayed in the Hale family for many years, it was eventually divided into apartments. 
 
         p The previous owners recreated the staircase and combined the units back into a single-family home. They also wonderfully renovated the main floor and, in 2000, completed a new kitchen. To make the house their own, Regina and Joe chose a lighter paint scheme. They had the second floor reconfigured, adding a master suite, and finished out the fire-damaged attic. The third floor, which now holds cozy bedrooms for their two teenage daughters, is accessed via a new "floating" staircase, designed so that the beautiful hall windows could be retained.
 
@@ -61,7 +61,7 @@ ul.TourHomes.u-container
 
         p Marji McCullough and Dirk Schroeder bought the home in 2014 when it was advertised as "a diamond in the rough." With the goal of bringing the home back to its former glory, they renovated extensively, almost doubling the living space and building out a spacious master suite in the attic and a "man cave" and bicycle room in the stone-walled basement. Look for the leaded-glass windows, heart-pine flooring repurposed from the attic, original fireplace covers, and rooms with coved ceilings and curved walls. The kitchen island and counters were built from beams discovered during the attic renovation. The Georgia Historic Preservation State Tax Incentive Programs helped pay for their restoration. 
 
-        p Some quirky history was made in this spot. Newspaper articles tell of Inman Park's Chrysanthemum Flower Festival, held here in 1909. During prohibition in 1924 a liquor syndicate was run out of the house. A year later, police broke up a gambling ring here. Today the home is a cozy oasis in Inman Park, from which you can almost reach out and touch downtown Atlanta.
+        p Some quirky history was made in this spot. Newspaper articles tell of Inman Park's Chrysanthemum Flower Festival, held here in 1909. During prohibition in 1924 a liquor syndicate was run out of the house. A year later, police broke up a gambling ring here. Today the home is a cozy oasis in Inman Park, from which you can almost reach out and touch downtown Atlanta.
 
 
     //- 5
@@ -90,19 +90,19 @@ ul.TourHomes.u-container
 
         p A little over a year ago, the house was bought by Philip and Amy Covin, who had always wanted to live in Inman Park and attended many of its prior festivals. They worked with their architects and contractor on a remodeling plan that added a new stairwell to link the basement apartment with the main living space. The plan also included a renovated kitchen and hall bath as well as an addition to accommodate a master bath and closet. Some of the Covins' favorite features include having a master bedroom on the main floor next to their 6-year-old son's room and the view from two new rear porches, which look out across Waverly Way toward Freedom Park.
 
-        p To maintain the integrity and flow of the original house, they configured the remodeled kitchen so that the doorway into the living room mirrors the existing doorway between the living and dining rooms. They also retained the four original fireplaces with their cast-iron surrounds, the wooden beams in the living room, and the original floors, and they restored the original claw-foot tub. Next, they plan to install a reproduction of the original stained-glass transom window over the front door. The Georgia Historic Preservation State Tax Incentive Programs helped them pay for their restoration.
+        p To maintain the integrity and flow of the original house, they configured the remodeled kitchen so that the doorway into the living room mirrors the existing doorway between the living and dining rooms. They also retained the four original fireplaces with their cast-iron surrounds, the wooden beams in the living room, and the original floors, and they restored the original claw-foot tub. Next, they plan to install a reproduction of the original stained-glass transom window over the front door. The Georgia Historic Preservation State Tax Incentive Programs helped them pay for their restoration.
 
     //- 7
     li
         h3
-            | 992 Carmel Avenue 
+            | 992 Carmel Avenue 
             small Anne and Charlie Henn
 
         mixin tourImage("/assets/img/2018/toh/7-992-carmel", "992 Carmel")
         
         p This is a hospitable house, made for entertaining, with its wrap-around porch, welcoming wide-open spaces, and bar in the front room. Owners Anne and Charlie Henn and their two children, who have lived here for the past four years, have hosted parties with well over a hundred people. They are the house's second owners, and they fell in love with its almost Addams-family-like second-empire-style exterior. Since moving in, the Henns have added an apartment above the garage.
 
-        p Although dates only from 2003, this custom-built structure is filled with beautiful antique architectural details. Look for the art-nouveau lighting in the hallways and stained-glass windows in the stairwell and elsewhere. The rooms in the house open graciously onto one another, making circulation easy and culminating in the bright kitchen and family room. Another interesting feature is that all the bathroom sinks occupy refurbished dressers.
+        p Although dates only from 2003, this custom-built structure is filled with beautiful antique architectural details. Look for the art-nouveau lighting in the hallways and stained-glass windows in the stairwell and elsewhere. The rooms in the house open graciously onto one another, making circulation easy and culminating in the bright kitchen and family room. Another interesting feature is that all the bathroom sinks occupy refurbished dressers.
  
         p A bit of family history is preserved in the front room, where you will find a picture of one of Bermuda's early governors, who was related to Charlie. Look, too, for the seventeenth-century map of Bermuda by the distinguished Dutch cartographer Willem Blaeu. The collection of Republican campaign pins in the front room is not a political statement, but rather a tribute to Charlie's grandmother, who was a delegate to the 1960 Republican convention. An impressive collection of work by Atlanta artists is displayed throughout the Henns' home. 
 
@@ -120,7 +120,7 @@ ul.TourHomes.u-container
          
         p With the help of her designer, Danielle created a wonderful new look for the interior. Beautifully simple, it is a harmonious blend of luxury and restraint, with the perfect balance between elegance and approachability, between glamour and comfort.  
          
-        p After a long day working in marketing at Coca-Cola, Danielle looks forward to joining her cocker spaniel, Ace, in this jewel of a bungalow—just in time, that is, to open a couple of bottles of red, pop the hors d'oeuvres in the oven, and listen for that first knock at her front door! 
+        p After a long day working in marketing at Coca-Cola, Danielle looks forward to joining her cocker spaniel, Ace, in this jewel of a bungalow - just in time, that is, to open a couple of bottles of red, pop the hors d'oeuvres in the oven, and listen for that first knock at her front door! 
 
     //- 9
     li
@@ -130,11 +130,11 @@ ul.TourHomes.u-container
 
         mixin tourImage("/assets/img/2018/toh/9-397-sinclair", "397 Sinclair")
         
-        p This house, with its inviting front porch, is a classic Sears mail-order bungalow built in 1914. (Yes, in the early twentieth century one could order houses—both plans and the materials to build them—out of a catalogue.) Originally a two-bedroom one-bath house, it had been expanded to three bedrooms when Megan and Dan bought it about five years ago. They moved out for six months last year to remodel and create a fantastic space for entertaining. They added their dream kitchen, connected to a family room with high ceilings and a new back porch/patio area. They also added a guest bathroom and master closet. The trap door in the kitchen leads to a small basement where the original coal cart remains to this day. 
+        p This house, with its inviting front porch, is a classic Sears mail-order bungalow built in 1914. (Yes, in the early twentieth century one could order houses—both plans and the materials to build them—out of a catalogue.) Originally a two-bedroom one-bath house, it had been expanded to three bedrooms when Megan and Dan bought it about five years ago. They moved out for six months last year to remodel and create a fantastic space for entertaining. They added their dream kitchen, connected to a family room with high ceilings and a new back porch/patio area. They also added a guest bathroom and master closet. The trap door in the kitchen leads to a small basement where the original coal cart remains to this day. 
 
-        p The home is decorated with beautiful artwork and photography, much of it by Megan. The portrait in the guest bedroom is by Burt Greenspan, the La Calma El Chaos paintings in the dining room are from Barcelona, and the painting above the fireplace is by Kelley Morley. In the office are ceremonial masks collected on trips to Korea, Mexico, Morocco, South Africa, Venezuela, Argentina, and Bangladesh. 
+        p The home is decorated with beautiful artwork and photography, much of it by Megan. The portrait in the guest bedroom is by Burt Greenspan, the La Calma El Chaos paintings in the dining room are from Barcelona, and the painting above the fireplace is by Kelley Morley. In the office are ceremonial masks collected on trips to Korea, Mexico, Morocco, South Africa, Venezuela, Argentina, and Bangladesh. 
 
-        p The couple has integrated a few family heirlooms into the décor. The bookshelves in the hallway are from Dan's great-great grandfather. Megan's grandfather was a geologist, and the triptych above the couch in the TV room comes from his archives. With their dog Harvey, Dan and Megan enjoy living here, and they spend a lot of time relaxing on their front porch or new back porch.
+        p The couple has integrated a few family heirlooms into the décor. The bookshelves in the hallway are from Dan's great-great grandfather. Megan's grandfather was a geologist, and the triptych above the couch in the TV room comes from his archives. With their dog Harvey, Dan and Megan enjoy living here, and they spend a lot of time relaxing on their front porch or new back porch.
 
     //- 10
     li
@@ -150,6 +150,7 @@ ul.TourHomes.u-container
 
         p The home contains several notable pieces of original art work, collected through family, travel, and work. On a table in the living room is a print by the British graffiti artist Banksy. In the dining room is a photograph, signed by congressional representative John Lewis, of the civil rights march from Selma to Montgomery. In the kids' playroom are prints from collages by the Los Angeles street artist Mr. Brainwash. Upstairs, on the wall between the master bedroom and bath, is the designer's scribble of Carrie's blue satin wedding shoes from the Sex and the City movie, which Manolo Blahnik gave them as a wedding gift.  
 
-        p Sponsored by Jenny Levine Photography
+        p
+            em Sponsored by Jenny Levine Photography
 
         //- mixin tourImage("/assets/img/2018/toh/", "alt")
