--- a/src/html/sponsors/index.jade
+++ b/src/html/sponsors/index.jade
@@ -20,20 +20,21 @@ block contents
             a(href="https://www.northside.com/" target="_blank")
                 img(src="/assets/img/2018/sponsors/northside-hospital.png" alt="Inman Park Festival Presenting Sponsor: Northside Hospital")
     
-        //- h2.SponsorsHeader.SponsorsHeader--gold Gold Sponsors
-        //- ul.Sponsors.Sponsors--gold
-        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/sweetwater-brewing.png", "Sweetwater Brewing Co.", "http://sweetwaterbrew.com/")
-        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/blue-moon.png", "Blue Moon Brewing", "https://www.bluemoonbrewingcompany.com")
-        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/old-fourth-ward-distillery.png", "Old Fourth Ward Distillery", "http://www.old4th.com/")
-        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/sierra-nevada.png", "Sierra Nevada Brewing", "http://www.sierranevada.com/")
-        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/terrapin.png", "Terrapin Beer Co.", "http://terrapinbeer.com/")
-        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/asw-distillery.png", "ASW Distillery", "http://www.aswdistillery.com/")
-        //-     mixin sponsorGridImage("/assets/img/2017/sponsors/gold/northside-hospital.png", "Northside Hospital", "http://www.northside.com/")
+        h2.SponsorsHeader.SponsorsHeader--gold Gold Sponsors
+        ul.Sponsors.Sponsors--gold
+            mixin sponsorGridImage("/assets/img/2017/sponsors/gold/sweetwater-brewing.png", "Sweetwater Brewing Co.", "http://sweetwaterbrew.com/")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/gold/blue-moon.png", "Blue Moon Brewing", "https://www.bluemoonbrewingcompany.com")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/gold/old-fourth-ward-distillery.png", "Old Fourth Ward Distillery", "http://www.old4th.com/")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/gold/sierra-nevada.png", "Sierra Nevada Brewing", "http://www.sierranevada.com/")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/gold/terrapin.png", "Terrapin Beer Co.", "http://terrapinbeer.com/")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/gold/asw-distillery.png", "ASW Distillery", "http://www.aswdistillery.com/")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/gold/matua.png", "Matua", "https://www.matua.co.nz/")
     
         h2.SponsorsHeader.SponsorsHeader--silver Silver Sponsors
         ul.Sponsors.Sponsors--silver
             mixin sponsorGridImage("/assets/img/2018/sponsors/silver/andre-de-winter.png", "Andre de Winter", "http://www.dewinterhomes.com/")
-            mixin sponsorGridImage("/assets/img/2018/sponsors/silver/mailchimp.png", "MailChimp", "http://mailchimp.com/")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/silver/mailchimp.png", "MailChimp", "https://mailchimp.com/")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/silver/king-of-pops.png", "King of Pops", "https://kingofpops.com/")
     
         h2.SponsorsHeader.SponsorsHeader--bronze Bronze Sponsors
         ul.Sponsors.Sponsors--bronze
@@ -41,10 +42,11 @@ block contents
             mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/whitten.jpg", "Whitten Management Services", "http://www.whittenmanagement.com/")
             mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/wrfg.png", "WRFG", "http://wrfg.org")
             mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/kind.png", "KIND", "https://www.kindsnacks.com/")
-            //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/peachskinsheets.png", "PeachSkinSheets", "http://www.peachskinsheets.com")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/honest-tea.png", "Honest Tea", "https://www.honesttea.com/")
             mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/renewal-andersen.png", "Renewal by Andersen", "http://www.rbaofatlanta.com/")
-            //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/creative-loafing.png", "Creative Loafing", "http://www.clatl.com/")
-            //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/atlanta-united.png", "Atlanta United", "http://www.atlutd.com/")
-            //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/edgewood-retail.png", "Edgewood Retail District", "http://shopedgewoodretaildistrict.com/")
-            //- mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/xfinity.png", "Xfinity", "https://www.xfinity.com")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/silver/circus-camp.png", "Circus Camp", "http://www.circuscamp.org/")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/mountain-view-group.png", "Mountain View Group", "http://www.mountainviewgroup.com/")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/silver-smiles.png", "Silver Smiles", "https://silversmiles.com/")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/atlanta-beltline-partnership.png", "Atlanta Beltline Partnership", "https://beltline.org/about/atlanta-beltline-partnership/")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/alexan.png", "Alexan on Krog", "http://alexanonkrog.com/")
             mixin sponsorGridImage("/assets/img/2018/sponsors/toh/opendoor.png", "Opendoor", "https://www.opendoor.com/t/f_events/c_q118pilot/p_inmanpark")
