stripped more illegal chars

--- a/src/html/events/tour-of-homes/_homes-2018.jade
+++ b/src/html/events/tour-of-homes/_homes-2018.jade
@@ -13,7 +13,7 @@ ul.TourHomes.u-container
         
         mixin tourImage("/assets/img/2017/toh/2017-1-1015-edgewood-umc", "Inman Park Methodist Church")
         
-        p After the Civil War ended, building supplies and money were in short supply. Yet a small group of parishioners gathered to meet—first in homes, then in a small brush arbor, and finally in a wood-frame church in the Edgewood community. They founded the Inman Park Methodist Church, which celebrated its 150th anniversary as a congregation in 2015, with several descendants of the early families in attendance.  
+        p After the Civil War ended, building supplies and money were in short supply. Yet a small group of parishioners gathered to meet - first in homes, then in a small brush arbor, and finally in a wood-frame church in the Edgewood community. They founded the Inman Park Methodist Church, which celebrated its 150th anniversary as a congregation in 2015, with several descendants of the early families in attendance.  
  
         p Twenty-three-year-old architect Willis Franklin Denny II (1874–1905) designed the current Romanesque-style sanctuary building, constructed of Stone Mountain granite at a cost of $12,620. The cornerstone for the building was laid on September 6, 1897, and the building was dedicated on April 17, 1898.  
  
@@ -130,7 +130,7 @@ ul.TourHomes.u-container
 
         mixin tourImage("/assets/img/2018/toh/9-397-sinclair", "397 Sinclair")
         
-        p This house, with its inviting front porch, is a classic Sears mail-order bungalow built in 1914. (Yes, in the early twentieth century one could order houses—both plans and the materials to build them—out of a catalogue.) Originally a two-bedroom one-bath house, it had been expanded to three bedrooms when Megan and Dan bought it about five years ago. They moved out for six months last year to remodel and create a fantastic space for entertaining. They added their dream kitchen, connected to a family room with high ceilings and a new back porch/patio area. They also added a guest bathroom and master closet. The trap door in the kitchen leads to a small basement where the original coal cart remains to this day. 
+        p This house, with its inviting front porch, is a classic Sears mail-order bungalow built in 1914. (Yes, in the early twentieth century one could order houses - both plans and the materials to build them - out of a catalogue.) Originally a two-bedroom one-bath house, it had been expanded to three bedrooms when Megan and Dan bought it about five years ago. They moved out for six months last year to remodel and create a fantastic space for entertaining. They added their dream kitchen, connected to a family room with high ceilings and a new back porch/patio area. They also added a guest bathroom and master closet. The trap door in the kitchen leads to a small basement where the original coal cart remains to this day. 
 
         p The home is decorated with beautiful artwork and photography, much of it by Megan. The portrait in the guest bedroom is by Burt Greenspan, the La Calma El Chaos paintings in the dining room are from Barcelona, and the painting above the fireplace is by Kelley Morley. In the office are ceremonial masks collected on trips to Korea, Mexico, Morocco, South Africa, Venezuela, Argentina, and Bangladesh. 
 
