music edits; toh ticket copy edits; sponsor updates

--- a/src/html/events/tour-of-homes/index.jade
+++ b/src/html/events/tour-of-homes/index.jade
@@ -21,7 +21,7 @@ block contents
 
         h2 Tour of Homes Tickets
 
-        p Tickets are $#{globals.tour.cost.advance} each and will be on sale in March.
+        p Tour of Homes tickets are $#{globals.tour.cost.advance} in advance and $#{globals.tour.cost.door} starting Friday, #{globals.ipf.date.friday.date}. Tickets will be available for purchase online shortly.
 
         h2 Tour of Homes Sponsors
         
