--- a/src/html/sponsors/index.jade
+++ b/src/html/sponsors/index.jade
@@ -35,6 +35,8 @@ block contents
             mixin sponsorGridImage("/assets/img/2018/sponsors/silver/andre-de-winter.png", "Andre de Winter", "http://www.dewinterhomes.com/")
             mixin sponsorGridImage("/assets/img/2018/sponsors/silver/mailchimp.png", "MailChimp", "https://mailchimp.com/")
             mixin sponsorGridImage("/assets/img/2018/sponsors/silver/king-of-pops.png", "King of Pops", "https://kingofpops.com/")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/toh/vacasa.png", "Vacasa", "https://www.vacasa.com/")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/silver/fontis.png", "Fontis", "https://fontiswater.com/")
     
         h2.SponsorsHeader.SponsorsHeader--bronze Bronze Sponsors
         ul.Sponsors.Sponsors--bronze
