--- a/src/html/events/kidzone/index.jade
+++ b/src/html/events/kidzone/index.jade
@@ -7,7 +7,7 @@ block contents
 
     mixin secondaryNav(globals.events.nav, "kids' zone")
 
-    //- mixin presentingSponsor("/assets/img/2017/sponsors/presenting-sponsors/publix.png", "Publix")
+    mixin presentingSponsor("/assets/img/2018/sponsors/presenting/king-of-pops.png", "King of Pops")
 
     .u-container
     
@@ -15,11 +15,15 @@ block contents
     
     .Hero.owl-carousel.owl-theme
         div
-            mixin slideImage('/assets/img/slideshows/2017/golfing')
+            mixin slideImage('/assets/img/slideshows/2018/kidzone-face-paint')
         div
-            mixin slideImage('/assets/img/slideshows/2017/bouncy-girl')
+            mixin slideImage('/assets/img/slideshows/2018/kidzone-sphere')
         div
-            mixin slideImage('/assets/img/slideshows/2017/kidzone-crowd')
+            mixin slideImage('/assets/img/slideshows/2018/kidzone-acrobats')
+        div
+            mixin slideImage('/assets/img/slideshows/2018/kidzone-dog-dance')
+        div
+            mixin slideImage('/assets/img/slideshows/2018/kidzone-red-dots')
     
     article.u-container
     
@@ -38,25 +42,24 @@ block contents
         p Events for Saturday #{globals.ipf.date.saturday.date}:
 
         ul
-            li 11:30 Atlanta Intown Tumbling and Yoga for Kids Yoga Morning
-            li 12:00 WRFG Radio's Butterfly Tales Storytelling
+            li 11:30 Coach Beauchamp Kids' Yoga
+            li 12:00 Storytelling by Tosinger
+            li 1:00 Circus Camp's Aerial Performance
             li 1:30 Paniflov's Performing Pets
             li 2:00 Festival Parade
             li 3:30 Paniflov's Performing Pets
             li 4:00 Circus Camp's Aerial Performance
-            li 5:00 Sweet Pea and Markey's Giant Bubbles
-            li 5:30 WRFG Radio's Butterfly Tales Storytelling
+            li 5:00  Miss Ladybug's Garden Variety Shoe Show
         
         p Events for Sunday #{globals.ipf.date.sunday.date}:
 
         ul
-            li 11:30 Atlanta Intown Tumbling and Yoga for Kids Yoga Morning
+            li 11:30 Coach Beauchamp Kids' Yoga
             li 12:00 Paniflov's Performing Pets
-            li 12:30 WRFG Radio's Butterfly Tales Storytelling
+            li 12:30 Mr. Greg
             li 2:00 Paniflov's Performing Pets
-            li 3:00 Sweet Pea and Markey's Giant Bubbles
-            li 3:30 Circus Camp's Aerial Performance
-            li 4:00 WRFG Radio's Butterfly Tales Storytelling
+            li 3:00 Mr. Greg
+            li 4:00 Miss Ladybug's Garden Variety Shoe Show
 
 block scripts
     script.
