--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -60,11 +60,11 @@ block contents
 
         .PromotionItemHero-text
             section
-                h2 Artwork Chosen
+                h2 Tour Tickets on Sale
                 p 
-                    a(href="/art/2018/") Read the interview with local artist Cooper Pierce.
+                    a(href="/events/tour-of-homes/#buy-tickets") Buy Tour of Homes tickets online now!
             .ArrowNav
-                a(href="/art/2018/") >
+                a(href="/events/tour-of-homes/#buy-tickets") >
 
     ul.PromotionGrid.u-container.u-container--noPad
         li.PromotionItem.alt-primary
