updated local tour ticket locations

--- a/src/html/events/tour-of-homes/_tickets-local.jade
+++ b/src/html/events/tour-of-homes/_tickets-local.jade
@@ -3,9 +3,11 @@ h2 Buying Tickets at Neighborhood Locations
 p Tickets can also be purchased in-person at the following neighborhood locations. These locations accept only checks or cash for ticket purchases.
 
 ul
-    li Little Five Points Pharmacy (<a href="https://goo.gl/maps/dPj7YMSc2zx">484 Moreland Avenue</a>)
-    li Nandina Home and Design (<a href="https://goo.gl/maps/4PRd7FtG4JL2">245 N. Highland Avenue</a>)
-    li The Collection (<a href="https://goo.gl/maps/ru6kfvxbbNx">723 Lake Avenue</a>)
+    li Revolution Donuts  (<a href="https://goo.gl/maps/4EVVLwEP8vP2">745 Edgewood Ave</a>)
+    li The Collective (<a href="https://goo.gl/maps/ru6kfvxbbNx">723 Lake Avenue</a>)  
+    li Little 5 Points Pharmacy (<a href="https://goo.gl/maps/JD8ohgwFUZ22">484 Moreland Avenue</a>)
+    li Vinoteca (<a href="https://goo.gl/maps/KnAiVURa3iE2">299 North Highland Avenue</a>)
+
 
 p Starting at noon on Friday #{globals.ipf.date.friday.date}, tickets at these locations will increase to $#{globals.tour.cost.door} and be available through the end of Festival.
 
