--- a/src/html/events/tour-of-homes/_tickets-local.jade
+++ b/src/html/events/tour-of-homes/_tickets-local.jade
@@ -1,15 +1,17 @@
 h2 Buying Tickets at Neighborhood Locations
 
-p Tickets can also be purchased in-person at the following neighborhood locations. These locations accept only checks or cash for ticket purchases.
+p Tickets will be available for purchase at local neighborhood locations soon.
 
-ul
-    li Revolution Donuts  (<a href="https://goo.gl/maps/4EVVLwEP8vP2">745 Edgewood Ave</a>)
-    li The Collective (<a href="https://goo.gl/maps/ru6kfvxbbNx">723 Lake Avenue</a>)  
-    li Little 5 Points Pharmacy (<a href="https://goo.gl/maps/JD8ohgwFUZ22">484 Moreland Avenue</a>)
-    li Vinoteca (<a href="https://goo.gl/maps/KnAiVURa3iE2">299 North Highland Avenue</a>)
+//- p Tickets can also be purchased in-person at the following neighborhood locations. These locations accept only checks or cash for ticket purchases.
+//- 
+//- ul
+//-     li Revolution Donuts  (<a href="https://goo.gl/maps/4EVVLwEP8vP2">745 Edgewood Ave</a>)
+//-     li The Collective (<a href="https://goo.gl/maps/ru6kfvxbbNx">723 Lake Avenue</a>)  
+//-     li Little 5 Points Pharmacy (<a href="https://goo.gl/maps/JD8ohgwFUZ22">484 Moreland Avenue</a>)
+//-     li Vinoteca (<a href="https://goo.gl/maps/KnAiVURa3iE2">299 North Highland Avenue</a>)
 
 
-p Starting at noon on Friday #{globals.ipf.date.friday.date}, tickets at these locations will increase to $#{globals.tour.cost.door} and be available through the end of Festival.
+p Starting at noon on Friday #{globals.ipf.date.friday.date}, tickets at neighborhood locations will increase to $#{globals.tour.cost.door} and be available through the end of Festival.
 
 h2 Important Details
 
