added local ticket locations; added sponsor

--- a/src/html/sponsors/index.jade
+++ b/src/html/sponsors/index.jade
@@ -52,3 +52,5 @@ block contents
             mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/atlanta-beltline-partnership.png", "Atlanta Beltline Partnership", "https://beltline.org/about/atlanta-beltline-partnership/")
             mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/alexan.png", "Alexan on Krog", "http://alexanonkrog.com/")
             mixin sponsorGridImage("/assets/img/2018/sponsors/toh/opendoor.png", "Opendoor", "https://www.opendoor.com/t/f_events/c_q118pilot/p_inmanpark")
+            mixin sponsorGridImage("/assets/img/2018/sponsors/bronze/homeadvisor.png", "HomeAdvisor", "https://www.homeadvisor.com/c.Atlanta.GA.html")
+            
