added 2018 vendors; updated conversion script to catch more issues with URLs and handle altered data format in tsv

--- a/src/html/booths/arts-crafts-market/index.jade
+++ b/src/html/booths/arts-crafts-market/index.jade
@@ -11,4 +11,6 @@ block contents
 
         h1 Arts & Crafts Market
         
-        p Vendors for this year's festival will be listed soon.
+        //- p Vendors for this year's festival will be listed soon.
+
+        include _vendor-list.jade
