--- a/src/html/booths/community-corner/index.jade
+++ b/src/html/booths/community-corner/index.jade
@@ -13,4 +13,6 @@ block contents
         
         //- p Non-profit organizations may request a space in the Community Corner which is separate from the main vendor area. Appropriate applicants (registered non-profits) are accepted based on availability on first come, first serve basis.
 
-        p Vendors for this year's festival will be listed soon.
+        //- p Vendors for this year's festival will be listed soon.
+        
+        include _vendor-list.jade
