--- a/src/html/booths/street-market/_vendor-list.jade
+++ b/src/html/booths/street-market/_vendor-list.jade
@@ -11,5 +11,5 @@ ul.Vendors
                         p.Vendor-name #{vendor.firstname} #{vendor.lastname}
                     - var hasUrl = vendor.url !== ''
                     if hasUrl
-                        a.Vendor-url(href="http://#{vendor.url}")= vendor.url
+                        a.Vendor-url(href="#{vendor.url}")= vendor.url
                     div.Vendor-category= vendor.category
