fixed time for young and elder band

--- a/src/html/about/faq/index.jade
+++ b/src/html/about/faq/index.jade
@@ -95,7 +95,7 @@ block contents
             dd There are several levels of sponsorships available to businesses of all sizes, including Gold and Silver levels as well as Friends of Festival designations.
 
             dt How do I learn more about sponsorships?
-            dd Go to the <a href="/contact">Contact Us page</a> and send an e-mail request to Festival Sponsorships.
+            dd Go to the <a href="/contact-us">Contact Us page</a> and send an e-mail request to Festival Sponsorships.
 
 
         h2 Volunteer
