--- a/src/assets/css/pages/_music.scss
+++ b/src/assets/css/pages/_music.scss
@@ -122,7 +122,7 @@ $bandPhotoBackground: #ddd;
     .img {
         background-color: $bandPhotoBackground;
         width: 130px;
-        height: 90px;
+        // height: 90px;
     }
 
     @media (min-width: $bp-md) {
