music, dance, other updates

--- a/src/html/events/dance/index.jade
+++ b/src/html/events/dance/index.jade
@@ -26,28 +26,31 @@ block contents
 
     article.u-container
 
-        p For the 16th year in-a-row, the Inman Park Festival and Tour of Homes presents a sampling of Atlanta's thriving and rich performing arts community during the Inman Park Dance Festival. 
-            
+        
         p
-            | There are two performances, <strong>Saturday, #{globals.ipf.date.saturday.date}</strong> and <strong>Sunday, #{globals.ipf.date.sunday.date}</strong>, in the Trolley Barn, 963 Edgewood Avenue at 4:00 pm 
-            = ' '
-            a(href="https://www.google.com/maps/place/THE+TROLLEY+BARN/@33.756329,-84.356141,17z/data=!3m1!4b1!4m2!3m1!1s0x88f503ff905e1bed:0xc1626dc0cd684569") [map it]
-            = '. '
-            | These performances are the same, free, family-friendly and will last for about an hour.
-
-        p The performing companies for this year's Dance Festival are Atlanta Ballet Centre Theatre, Ballethnic, Emory University Movement Studies Program, Full Radius Dance, and Georgia Ballet. This group is high-quality and represents pre-professional though seasoned professional performers and the concert dance vocabularies of classical ballet and modern.
-
-        p In its 85th year, the Atlanta Ballet is the State ballet of Georgia. It's Center for Dance Education is one of the largest dance schools in the United States. It offers dance instruction starting at age two and has programs for all ages and levels. The dancers of the Atlanta Ballet Centre Theatre are a group of dedicated pre-professionals that are building skills for a career in professional dance. 2017 is the first year that the Atlanta Ballet is represented at the Dance Festival.
-
-        p Ballethinic brings it unique blending of classical ballet and African dance forms back to the Dance Festival. With high energy and technical prowess, the dancers of this company always provide an entertaining performance.
-
-        p The Emory Dance and Movement Studies Program represents the ever growing and improving college choices for young dancers in the State. Students majoring or minoring in contemporary modern dance at Emory invest in the creative process, somatic-based training, and critical thinking skills that help capture connections between the realm of the body and the world.
-
-        p Full Radius Dance, a professional, physically integrated (dancers with and without disabilities) modern dance company, is currently celebrating its 25th anniversary.  The company began its 'silver' season as the sole USA dance company presented at the KIADA Festival in Seoul, South Korea and will cap the season as the first USA company to perform at Una Mirada Diferente Festival in Madrid, Spain.  Full Radius Dance returns to the Inman Park Dance Festival for the 16th consecutive year.
-
-        p Founded in 1960 by Marietta native Iris Hensley, The Georgia Ballet is a non-profit organization committed to inspiring the public through professional ballet performance, unparalleled dance training and meaningful community outreach. In addition to the professional company performers represented at the dance festival this organization includes The School of the Georgia Ballet which serves both the recreational and the applied student for whom ballet performance is a career goal and Arts In Education which provides access to performance for Title I school children and children with physical and mental disabilities.
-
-        p Just like the neighborhood of Inman Park and the Inman Park Festival and Tour of Homes, this dance event is unique. It is one of only two dance festivals in the City that pay the performers instead of charging a fee to participate. And, it is the only dance festival that presents both ballet and modern dance. We invite you to put one of the Dance Festival performances on your schedule for this year's festival.
+            | Saturday, April 28 &amp; Sunday, April 29
+            br
+            | 4:00 pm
+            br
+            | The Trolley Barn, 963 Edgewood Avenue, Atlanta GA 30307
+            br
+            | Free
+            
+        p Yet another way Atlanta's favorite street festival is unique is the Inman Park Dance Festival. This event is the only free admission dance festival in the region that presents both ballet and modern dance vocabularies and compensates its performers. The dance festival presents two performances in the Trolley Barn [link: www.thetrolleybarn.com], one on Saturday and one on Sunday at 4:00 pm. Performances last for about an hour and includes Q &amp; A with the artists. This is an intimate, family friendly event. The show is the same for both days and will present five companies; Atlanta Ballet Center Theatre <a target="_blank" href="http://centre.atlantaballet.com">centre.atlantaballet.com</a>, Ballethnic  <a target="_blank" href="http://ballethnic.org">ballethnic.org</a>, Catellier Dance Projects <a target="_blank" href="http://catellierdanceprojects.org">catellierdanceprojects.org</a>, Full Radius Dance <a target="_blank" href="http://fullradiusdance.org">fullradiusdance.org</a>, The Georgia Ballet <a target="_blank" href="http://www.georgiaballet.org">www.georgiaballet.org</a> and InmerseATL <a target="_blank" href="http://www.immerseatl.com">www.immerseatl.com</a>. Each company brings a unique dance voice to the show.
+        
+        p <a target="_blank" href="http://www.immerseatl.com">ImmersATL</a> is a new to the Inman Park Dance Festival. This dance organization is providing a link from preprofessional dance life to professional dance life supporting young adult performers. The mission of this company is to "train dancers in an environment that stirs curiosity, sparks joy and fosters an intentional work ethic." 
+        
+        p The <a target="_blank" href="http://www.georgiaballet.org">Georgia Ballet's</a>, as its name suggests, primary performing vocabulary is classical ballet. The company's repertory includes dances that are several hundred years old and dances that are of this century. This variety of work highlights the talents of the fine artists that perform with this company.
+        
+        p The modern dance vocabulary of physically integrated dance is the fort&eacute; of <a target="_blank" href="http://fullradiusdance.org">Full Radius Dance</a>. In fact, this Atlanta-based company is a recognized national and international leader in this dance form which is modern dance based movement for dancers with and without physical disabilities. Full Radius Dance is celebrated for its distinct style, technique, and artistry. This is recently demonstrated by performances in South Korea, Spain, and New York City and the placement of video footage of its 2018 concert in the Jerome Robbins Dance Division of The New York Public Library.
+        
+        p <a target="_blank" href="http://catellierdanceprojects.org">Catallier Dance Projects</a> is also a new to the festival. This modern company has a reputation for creating meaningful multimedia work and the press observes that their work is "energetic, witty, smart, engaging...smartly personal, transparently accessible, and deeply funny."
+        
+        p <a target="_blank" href="http://ballethnic.org">Ballethnic</a> is also a company with a singular movement voice. This company combines the vocabularies of classical ballet and West African dance. Always highly energetic, the company performs works directly linked to African culture and works that examine African American perspectives.
+        
+        p Atlanta Ballet Center for Dance Education is the dance festival's look to the future. The company is a pre-professional performing outlet for a group of conservatory students training at the Center. These high school aged performers will demonstrate their developing technical and artistic prowess.
+        
+        p Inman Park neighbor Carolyn Stine McLaughlin directs the Inman Park Dance Festival. She is a 20-plus-year resident of the neighborhood. The Inman Park Dance Festival was founded in 2001 and is a natural extension of her commitment to the Atlanta dance community and her teaching work with <a target="_blank" href="http://movementartsatlanta.wordpress.com">Movement Arts Atlanta</a>. If you know of a company that should be considered for next year's performances, please contact Carolyn via email: movementartsatl@gmail.com.
 
 
 
