--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -73,13 +73,13 @@ block contents
                 a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
 
 
-        //- li.PromotionItem
-        //-     section
-        //-         h3 Tour of Homes
-        //-         p
-        //-             a(href="/events/tour-of-homes") Preview the homes on tour this year.
-        //-     .ArrowNav
-        //-         a(href="#") >
+        li.PromotionItem
+            section
+                h3 Tour of Homes
+                p
+                    a(href="/events/tour-of-homes") Preview the homes on tour this year.
+            .ArrowNav
+                a(href="#") >
 
         //- Buy Tour Tickets Now
         //-
@@ -89,10 +89,10 @@ block contents
         //-         p The call for artwork entries deadline has passed. Check back for details on this year's winning artwork.
 
 
-        li.PromotionItem
-            section
-                h3 #{globals.ipf.date.year} Join the Parade
-                p If your group is interested in marching in this year's parade, <a href="#{globals.events.parade.application}">Download the Parade Application here</a>.
+        //- li.PromotionItem
+        //-     section
+        //-         h3 #{globals.ipf.date.year} Join the Parade
+        //-         p If your group is interested in marching in this year's parade, <a href="#{globals.events.parade.application}">Download the Parade Application here</a>.
 
         li.PromotionItem.alt-secondary
             section
