text updates, vendor updates, style improvement on tour tickets content

--- a/src/html/events/tour-of-homes/_paypal.jade
+++ b/src/html/events/tour-of-homes/_paypal.jade
@@ -4,7 +4,7 @@ p Tickets are now available.
 
 p <strong>Important Note:</strong> When your transaction has been completed, a receipt for your purchase will be emailed to you.
 
-p Please print the first page of the PayPal receipt sent via email showing your name and the number of tickets purchased. Bring this page to one of our Ticket Sales booths to exchange for your Tour of Homes Ticket(s).
+p.Big Please print the first page of the PayPal receipt sent via email showing your name and the number of tickets purchased. Bring this page to one of our Ticket Sales booths to exchange for your Tour of Homes Ticket(s).
 
 .PaypalItems
     //- Tour of Homes Individual Tickets - Advance Purchase
