--- a/src/html/booths/become-an-exhibitor/index.jade
+++ b/src/html/booths/become-an-exhibitor/index.jade
@@ -11,24 +11,24 @@ block contents
     
         h1 Become an Exhibitor
 
-        //- p Exhibitor applications for this year's festival are now closed. 
+        p Exhibitor applications for this year's festival are now closed. 
         //- Vendors will be notified of acceptance no later than #{globals.vendors.notification}.
 
-        p 
-            | To apply to become a vendor for the #{globals.ipf.date.year} #{globals.ipf.title}, please use this link:
-            = " "
-            a(href="https://www.zapplication.org/event-info.php?ID=6031") https://www.zapplication.org/event-info.php?ID=6031
-        
-        p 
-            | ZAPP is free for artists, and once you have created a profile, you can apply to other Festivals too. If you need additional help to get started, here is a link to instructions and a help video to apply to shows on ZAPP:
-            = " "
-            a(href="https://www.zapplication.org/help-center.php?page=how-to-apply") https://www.zapplication.org/help-center.php?page=how-to-apply
-
-        p 
-            | If you have questions, please email us at:
-            = " "
-            a(href="mailto:artinmanpark@gmail.com") artinmanpark@gmail.com
-        
+        //- p 
+        //-     | To apply to become a vendor for the #{globals.ipf.date.year} #{globals.ipf.title}, please use this link:
+        //-     = " "
+        //-     a(href="https://www.zapplication.org/event-info.php?ID=6031") https://www.zapplication.org/event-info.php?ID=6031
+        //- 
+        //- p 
+        //-     | ZAPP is free for artists, and once you have created a profile, you can apply to other Festivals too. If you need additional help to get started, here is a link to instructions and a help video to apply to shows on ZAPP:
+        //-     = " "
+        //-     a(href="https://www.zapplication.org/help-center.php?page=how-to-apply") https://www.zapplication.org/help-center.php?page=how-to-apply
+        //- 
+        //- p 
+        //-     | If you have questions, please email us at:
+        //-     = " "
+        //-     a(href="mailto:artinmanpark@gmail.com") artinmanpark@gmail.com
+        //- 
         //- h2 Deadlines for the #{globals.ipf.date.year} #{globals.ipf.title}:
         
         //- ul
